# openclaw-scaleway

./: .gitignore  .gitleaksignore  CLAUDE.md  README.md  renovate.json
.github/workflows/: build-autopair.yml  build-caddy.yml  build-openclaw-cli.yml  build-openclaw.yml  build-token-guard.yml  opentofu.yml  push-pomerium.yml  renovate.yml  trivy-compliance.yml
containers/: .trivyignore  Containerfile.autopair  Containerfile.caddy  Containerfile.grob  Containerfile.openclaw  Containerfile.openclaw-cli  Containerfile.pomerium  Containerfile.token-guard
containers/autopair/: Cargo.toml
containers/token-guard/: Cargo.toml
containers/token-guard/src/: main.rs
containers/token-guard/tests/: e2e.rs
docs/: PRD.md
tasks/: tasks-openclaw-scaleway.md
terraform/: .terraform.lock.hcl  backup.tf  cloud-init.yaml.tftpl  dns.tf  domain.tf  github.tf  iam.tf  instance.tf  killswitch.tf  main.tf  monitoring.tf  network.tf  outputs.tf  pomerium.tf  reconcile.tf  registry.tf  security.tf  tem.tf  terraform.tfvars.example  variables.tf
terraform/bootstrap/: .terraform.lock.hcl  main.tf
terraform/killswitch/: handler.py  test_handler.py
terraform/scripts/: reconcile-config.py
terraform/templates/: dns-monitor.sh.tftpl  grob.toml.tftpl  kube.yml.tftpl  openclaw.json.tftpl
terraform/tests/: backup.tftest.hcl  container.tftest.hcl  dns.tftest.hcl  e2e-backup.sh  iam.tftest.hcl  instance.tftest.hcl  monitoring.tftest.hcl  network.tftest.hcl  outputs.tftest.hcl  project.tftest.hcl  serverless.tftest.hcl  toggles.tftest.hcl  variables_validation.tftest.hcl
(+16 files in other folders)
